src/components/editor/editor.scss
.cm-content {
	font-weight: 600;
}
.cm-editor {
	height: 100vh;
}

.cm-gutters {
	display: inline;
}
.cm-scroller {
	&::-webkit-scrollbar {
		width: 0.3em;
	}

	&::-webkit-scrollbar-track {
		// box-shadow: ;
		background-color: #222326;
	}

	&::-webkit-scrollbar-thumb {
		background: #878a8c70;
	}
}

